infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels:
    app.kubernetes.io/part-of: awaves
---
apiVersion: v1
kind: Namespace
metadata:
  name: mobile
  labels:
    app.kubernetes.io/part-of: awaves
---
apiVersion: v1
kind: Namespace
metadata:
  name: api
  labels:
    app.kubernetes.io/part-of: awaves
